---
source: prql-compiler/src/parser/mod.rs
expression: "stmts_of_parse_pairs(parse_tree_of_str(&include_str!(\"../../../book/tests/prql/examples/variables-0.prql\").trim().replace(\"\\r\\n\",\n                        \"\\n\"), Rule::statements).unwrap()).unwrap()"
---
- Main:
    Pipeline:
      exprs:
        - FuncCall:
            name:
              Ident:
                - from
            args:
              - Ident:
                  - employees
            named_args: {}
        - FuncCall:
            name:
              Ident:
                - filter
            args:
              - Binary:
                  left:
                    Ident:
                      - country
                  op: Eq
                  right:
                    Literal:
                      String: USA
            named_args: {}
        - FuncCall:
            name:
              Ident:
                - derive
            args:
              - List:
                  - Binary:
                      left:
                        Ident:
                          - salary
                      op: Add
                      right:
                        Ident:
                          - payroll_tax
                    alias: gross_salary
                  - Binary:
                      left:
                        Ident:
                          - gross_salary
                      op: Add
                      right:
                        Ident:
                          - benefits_cost
                    alias: gross_cost
            named_args: {}
        - FuncCall:
            name:
              Ident:
                - filter
            args:
              - Binary:
                  left:
                    Ident:
                      - gross_cost
                  op: Gt
                  right:
                    Literal:
                      Integer: 0
            named_args: {}
        - FuncCall:
            name:
              Ident:
                - group
            args:
              - List:
                  - Ident:
                      - title
                  - Ident:
                      - country
              - FuncCall:
                  name:
                    Ident:
                      - aggregate
                  args:
                    - List:
                        - FuncCall:
                            name:
                              Ident:
                                - average
                            args:
                              - Ident:
                                  - salary
                            named_args: {}
                        - FuncCall:
                            name:
                              Ident:
                                - average
                            args:
                              - Ident:
                                  - gross_salary
                            named_args: {}
                        - FuncCall:
                            name:
                              Ident:
                                - sum
                            args:
                              - Ident:
                                  - salary
                            named_args: {}
                        - FuncCall:
                            name:
                              Ident:
                                - sum
                            args:
                              - Ident:
                                  - gross_salary
                            named_args: {}
                        - FuncCall:
                            name:
                              Ident:
                                - average
                            args:
                              - Ident:
                                  - gross_cost
                            named_args: {}
                        - FuncCall:
                            name:
                              Ident:
                                - sum
                            args:
                              - Ident:
                                  - gross_cost
                            named_args: {}
                          alias: sum_gross_cost
                        - Ident:
                            - count
                          alias: ct
                  named_args: {}
            named_args: {}
        - FuncCall:
            name:
              Ident:
                - sort
            args:
              - Ident:
                  - sum_gross_cost
            named_args: {}
        - FuncCall:
            name:
              Ident:
                - filter
            args:
              - Binary:
                  left:
                    Ident:
                      - ct
                  op: Gt
                  right:
                    Literal:
                      Integer: 200
            named_args: {}
        - FuncCall:
            name:
              Ident:
                - take
            args:
              - Literal:
                  Integer: 20
            named_args: {}

